# unicorn

./: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Cascader.vue  Input.vue  convert.ts
src/router/: index.ts
src/store/: pinia.ts
src/views/: Home.vue  Settings.vue
